--- a/.github/workflows/devops-starter-workflow.yml
+++ b/.github/workflows/devops-starter-workflow.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
-      with:aname: Build and Deploy Python app to Azure
+      with:
+        python-version: '3.10'
 on:
   push:
     branches:
